# afu-study

./: .gitignore  Procfile  README.md  flake.nix  justfile  pyproject.toml  requirements.txt  trained_dqn_agent_cartpole.pt  trained_dqn_agent_mountaincar.pt
admin/: cahier-des-charges.typ  cr-02-04.typ  cr-05-02.typ  cr-08-04.typ  cr-12-02.typ  cr-12-03.typ  cr-19-02.typ  cr-22-01.typ  cr-26-03.typ  cr-29-01.typ  oj-05-02.typ  oj-08-04.typ  oj-11-03.typ  oj-12-02.typ  oj-19-02.typ  oj-26-03.typ  oj-29-01.typ  rapport.typ  template.typ
afu/: __init__.py
afu.egg-info/: PKG-INFO  SOURCES.txt
afumain/: README.md
dataset/: OffPolicyDataset-AFU-PendulumStudy-v0-dataset.pk  OnPolicyDataset-AFU-LunarLanderContinuousStudy-v0-dataset.pk  OnPolicyDataset-SAC-LunarLanderContinuousStudy-v0-dataset.pk
experiments/: benchmark.yml
paper/: account-22-01.typ  action-04-02.typ  bibliography.yml  paper.typ  template.typ
results/: HybridPolicy-AFU-LunarLanderContinuousStudy-v0.pk  HybridPolicy-AFU-PendulumStudy-v0.pk  OffPolicy-AFU-CartPoleContinuousStudy-v0.pk  OffPolicy-AFU-LunarLanderContinuousStudy-v0.pk  OffPolicy-AFU-MountainCarContinuousStudy-v0.pk  OffPolicy-AFU-PendulumStudy-v0.pk  OffPolicy-AFUPerrin-CartPoleContinuousStudy-v0.pk  OffPolicy-AFUPerrin-PendulumStudy-v0.pk  OffPolicy-DDPG-CartPoleContinuousStudy-v0.pk  OffPolicy-DDPG-LunarLanderContinuousStudy-v0.pk  OffPolicy-DDPG-MountainCarContinuousStudy-v0.pk  OffPolicy-DDPG-PendulumStudy-v0.pk  OffPolicy-SAC-CartPoleContinuousStudy-v0.pk  OffPolicy-SAC-LunarLanderContinuousStudy-v0.pk  OffPolicy-SAC-MountainCarContinuousStudy-v0.pk  OffPolicy-SAC-PendulumStudy-v0-weights.pt  OffPolicy-SAC-PendulumStudy-v0.pk  OffPolicyDataset-AFU-PendulumStudy-v0.pk  Offline-AFU-PendulumStudy-v0.pk  Offline-AFUOffPolicyDataset-AFU-PendulumStudy-v0.pk  Offline-AFUOffPolicyDataset-IQL-PendulumStudy-v0.pk  Offline-AFUOnPolicyDataset-IQL-PendulumStudy-v0.pk  Offline-CALQL-PendulumStudy-v0.pk  Offline-SAC-PendulumStudy-v0.pk  OfflineOnlineTransition-AFU-LunarLanderContinuousStudy-v0.pk  OfflineOnlineTransition-AFU-PendulumStudy-v0.pk  OfflineOnlineTransition-CALQL-LunarLanderContinuousStudy-v0.pk  OfflineOnlineTransition-CALQL-PendulumStudy-v0.pk  OfflineOnlineTransition-IQL-LunarLanderContinuousStudy-v0.pk  OfflineOnlineTransition-IQL-PendulumStudy-v0.pk  OfflineOnlineTransition-SAC-LunarLanderContinuousStudy-v0.pk  OfflineOnlineTransition-SAC-PendulumStudy-v0.pk  OnPolicy-AFU-CartPoleContinuousStudy-v0.pk  OnPolicy-AFU-LunarLanderContinuousStudy-v0.pk  OnPolicy-AFU-MountainCarContinuousStudy-v0.pk  OnPolicy-AFU-PendulumStudy-v0.pk  OnPolicy-AFU-SwimmerStudy-v0.pk  OnPolicy-AFUPerrin-CartPoleContinuousStudy-v0.pk  OnPolicy-AFUPerrin-PendulumStudy-v0.pk  OnPolicy-DDPG-CartPoleContinuousStudy-v0.pk  (+30 more)
scripts/: benchmark.py  demo.py  dqn_testing.py  evaluate.py  figure.py  generate_dataset.py  mod_dataset.py  plot_results.py  plot_results.py~  train.py
tests/: main_test.py
weights/: HybridPolicy-AFU-PendulumStudy-v0-weights.pt  (+38 more)
(+43 files in other folders)
